// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<span
  className="input"
  style={undefined}
>
  <input
    autoComplete={undefined}
    autoFocus={false}
    className="control"
    disabled={false}
    id={undefined}
    maxLength={undefined}
    name="control"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={undefined}
    readOnly={false}
    type="text"
    value=""
  />
</span>
`;

exports[`Renders correctly with defined props 1`] = `
<span
  className="input outer"
  style={undefined}
>
  <input
    autoComplete="off"
    autoFocus={true}
    className="control"
    disabled={true}
    id="controls-id"
    maxLength="255"
    name="control"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="__"
    readOnly={true}
    type="password"
    value="initial"
  />
</span>
`;
